# jarvis

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  HEARTBEAT.md  README.md  config.sample.yaml  config.yaml  pyproject.toml
data/: rss_feeds.txt
deploy/: jarvis.service
docs/: SUMMARY.md  deploy.md  owner_profile.md
docs/instructions/: nightly-build.md
docs/plans/: 2026-01-29-telegram-assistant-design.md  2026-02-01-telegram-audio-transcription-design.md  2026-02-01-twitter-summary-to-file-design.md  2026-02-01-twitter-topic-summary-design.md  2026-02-02-hn-fetcher-design.md  2026-02-02-jarvis-restart-clean-design.md  2026-02-02-tts-design.md  2026-02-03-artifact-sharing-design.md  2026-02-03-rss-digest-design.md  2026-02-04-heartbeat-design.md  2026-02-04-owner-profile-proactive-design.md  2026-02-08-insight-radar-design.md
jarvis/: __init__.py  __main__.py  app.py  config.py  event_bus.py  events.py  formatting.py  skills.py  tasks.py  verbosity.py  workers.py
jarvis/audio/: transcriber.py  tts.py
jarvis/codex/: __init__.py  manager.py
jarvis/handlers/: __init__.py  command_router.py  message_sent.py  progress.py  trigger_dispatcher.py
jarvis/heartbeat/: __init__.py  runner.py
jarvis/memory/: __init__.py  manager.py
jarvis/messaging/: __init__.py  (+2 more)
jarvis_telegram_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: install.sh  radar_run.py  restart_clean.sh  rss_pdf_test_send.py  rss_run_once.py  rss_update_from_gist.py  run.sh  smoke_test.sh  test_transcription.py  test_webhook_trigger.sh
(+18 files in other folders)
